# sdv-fleet-management

./: .env.example  .gitignore  CLAUDE.md  DEMO.md  README.md  TODO.md  docker-compose.yml  learn.md  specs-v2.md  specs.md
.github/: dependabot.yaml
.github/workflows/: backend.yml  e2e.yml  frontend.yml
backend/: Cargo.toml  Dockerfile
backend/src/: campaign.rs  hawkbit.rs  main.rs  models.rs  mqtt.rs  store.rs
backend/src/api/: campaigns.rs  fleet.rs  mod.rs  ws.rs
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: campaigns.spec.ts  filter-map.spec.ts  fleet.spec.ts  table.spec.ts
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.vue  CampaignPanel.vue  FleetTable.vue  MapView.vue  VehicleDrawer.vue  main.ts  types.ts  useCampaignSocket.ts  useFleetSocket.ts
frontend/src/__tests__/: VehicleDrawer.test.ts  useCampaignSocket.test.ts  useFleetSocket.test.ts
kuksa2mqtt/: Cargo.toml  Dockerfile  build.rs
kuksa2mqtt/src/: main.rs
ota-agent/: Cargo.toml  Dockerfile  build.rs
ota-agent/proto/kuksa/val/v1/: types.proto  val.proto
ota-agent/src/: main.rs
seed/: Dockerfile  requirements.txt  seed.py  vehicles.json
seed/tests/: test_seed.py
