[package]
name    = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum                = { version = "0.7", features = ["ws"] }
rumqttc             = "0.24"
tokio               = { version = "1", features = ["full"] }
dashmap             = "5"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
chrono              = { version = "0.4", features = ["serde"] }
tower-http          = { version = "0.5", features = ["cors"] }
utoipa              = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui   = { version = "6", features = ["axum"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower             = { version = "0.4", features = ["util"] }
http-body-util    = "0.1"
tokio-tungstenite = "0.24"
futures-util      = "=0.3.31"
