[package]
name = "ota-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
tonic       = "0.11"
prost       = "0.12"
rumqttc     = "0.24"
rand        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11"
